--- a/src/main/resources/DockerFile
+++ b/src/main/resources/DockerFile
@@ -1,4 +1,6 @@
 FROM java:alpine
 VOLUME /tmp
 ADD demo_actions-0.0.1-SNAPSHOT.jar app.jar
+# 暴露端口
+EXPOSE 8080
 ENTRYPOINT ["java","-Xms256m","-Xmx256m","-jar","/app.jar"]
