--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,8 +29,9 @@ jobs:
     # 登陆到我们自己的 docker registry
     - name: Login to aliyun docker image registry
       run: echo "${{ secrets.REGISTRY_PASSWORD }}" |  docker login --username=shangguanyize registry.cn-hangzhou.aliyuncs.com --password-stdin
-
+    - name: docker tag to aliyun docker image registry
+      run: docker tag demo_actions registry.cn-hangzhou.aliyuncs.com/yvam0910/demo_actions:0.1
     # 上传 docker 镜像
     - name: Push image to aliyun docker image registry
-      run: docker push demo_actions:0.1
+      run: docker push registry.cn-hangzhou.aliyuncs.com/yvam0910/demo_actions:0.1
     
